# trading-system

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: AGENTS.md  adding-data-sources.md  agent-layer.md  architecture.md  backtest.md  designing-gates.md  ensemble.md  investigation-handoff.md  pipeline.md  portfolio.md
model_trader/: __init__.py
model_trader/agent/: __init__.py  agent.py  philosophy_template.md
model_trader/backtest/: runner.py
model_trader/data/: base.py
model_trader/detectors/: __init__.py  cisd.py  displacement.py  failure_swings.py  fvg.py  smt.py  swings.py
model_trader/ensemble/: degradation.py
model_trader/executor/: __init__.py  hyperliquid.py
model_trader/gates/: __init__.py  base.py
model_trader/monitor/: live.py
model_trader/paper_trader/: __init__.py  filters.py  metrics.py
pipeline/: extract_strategy.py  scaffold_trader.py
src/: AGENTS.md
src/model_trader/: AGENTS.md  __init__.py  logging.py
src/pipeline/: AGENTS.md  extract_strategy.py  fetch_youtube_transcripts.py  scaffold_trader.py
tests/: AGENTS.md  conftest.py  test_backtest_cost.py  test_cisd.py  test_data_binance.py  test_data_cache.py  test_data_yahoo.py  test_displacement.py  test_failure_swings.py  test_fvg.py  test_portfolio_sizing.py  test_smt.py  test_swings.py  test_trading.py
traders/: AGENTS.md  VERDICT_LOG.md  diagnostics.py  portfolio.yaml  portfolio_backtest.py  portfolio_run.py  portfolio_run_output.txt  portfolio_trades.json  utils.py
traders/mulham/: AGENTS.md  README.md  backtest.py  config.yaml  main.py  (+3 more)
(+59 files in other folders)
