[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-trader"
version = "0.1.0"
description = "Turn a trader's content (videos, tweets, articles) into an executable screener and paper trading system"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "tzdata>=2026.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
pipeline = ["yt-dlp>=2024.1.0"]
live = ["hyperliquid-python-sdk>=0.9"]
all = ["yt-dlp>=2024.1.0", "hyperliquid-python-sdk>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["network: tests that hit live external APIs (excluded by default)"]
addopts = "-m \"not network\""
